# robdd-with-template-hs

./: .gitignore  LICENSE  robdd.cabal  stack.yaml
app/: Main.hs
app/App/: Benchmarks.hs  CNF2BoolExpr.hs
src/BoolExpr/: BoolExpr.hs  Compiler.hs  Env.hs  OBDD.hs  ROBDD.hs  ROBDD_TH.hs
src/Data/: Meta.hs
src/Util/: BiDLUT.hs
test/: Spec.hs
test/BoolExpr/QuickCheck/: BoolExpr.hs  Compiler.hs  OBDD.hs  ROBDD.hs  ROBDD_TH.hs
test/BoolExpr/UnitTests/: BoolExpr.hs  Compiler.hs
