name:                robdd
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/robrene/robdd#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Spoel
maintainer:          robspoel@gmail.com
copyright:           2016 Rob Spoel
category:            Code Generation
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BoolExpr.BoolExpr
                     , BoolExpr.Env
                     , BoolExpr.OBDD
                     , BoolExpr.ROBDD
                     , BoolExpr.ROBDD_TH
                     , Data.Meta
  build-depends:       base
                     , bimap
                     , containers
                     , directory
                     , filepath
                     , mtl
                     , plugins
                     , template-haskell
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

executable robdd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       App.Benchmarks
                     , App.CNF2BoolExpr
  build-depends:       base
                     , robdd
                     , array
                     , criterion
                     , directory
                     , parse-dimacs
                     , template-haskell
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010

test-suite robdd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BoolExpr.UnitTests.BoolExpr
                     , BoolExpr.QuickCheck.BoolExpr
                     , BoolExpr.QuickCheck.OBDD
                     , BoolExpr.QuickCheck.ROBDD
                     , BoolExpr.QuickCheck.ROBDD_TH
  build-depends:       base
                     , robdd
                     , HUnit
                     , QuickCheck
                     , containers
                     , template-haskell
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrene/robdd-with-template-hs
